# logicmin

exactsynth/: Cargo.toml
exactsynth/src/: luts.rs  main.rs  nand.rs  sat.rs  sum_of_products.rs  synth.rs
testcase/: convert_lib.py  run.sh  synth.ys  synth_generic.v  synth_sky130.v  synth_sky130_more_gates.v  test.v
